# openai-sdk-agents

./: .gitignore  LICENSE  README.md  main.py  orchestration.py  pyproject.toml
hooks/: myhooks.py
my_agents/: router_agent.py  web_agent.py
tests/: web-agent-test.py
tools/: web_search.py
