[project]
name = "openai-sdk-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "openai>=1.69.0",
    "openai-agents>=0.0.7",
    "serpapi>=0.1.5",
    "selectolax>=0.3.17",
    "requests>=2.31.0",
]
